--- a/发布流程.md
+++ b/发布流程.md
@@ -19,14 +19,11 @@ SwitchHosts管理不同环境的host
 
 1.在myeclipse中开发好项目，打包成war格式
 
-2.购买云服务器，阿里云购买（ecs）教程：
-
-http://jingyan.baidu.com/article/4e5b3e195ae68a91901e2402.html
-
+2.购买云服务器
 
 3.登录云服务器，以下是教程
 
-linux系统的阿里云服务器：http://jingyan.baidu.com/article/84b4f565f3d99260f7da3271.html
+[linux系统的阿里云服务器](http://jingyan.baidu.com/article/84b4f565f3d99260f7da3271.html)
 
 4.远程连接
 以windows为例http://jingyan.baidu.com/article/cd4c297914be1e756e6e60c3.html
@@ -109,21 +106,129 @@ NODE16
 [JDK+Tomcat+MySQL Linux部署上线](https://blog.csdn.net/syc000666/article/details/128281617?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_baidulandingword~default-0-128281617-blog-128010946.235^v28^pc_relevant_default&spm=1001.2101.3001.4242.1&utm_relevant_index=3)
 [python项目nginx](https://blog.csdn.net/MeiJin_/article/details/128010946?spm=1001.2101.3001.6650.2&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-2-128010946-blog-82718781.235%5Ev28%5Epc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-2-128010946-blog-82718781.235%5Ev28%5Epc_relevant_default&utm_relevant_index=3)
 
-##小项目
-引入依赖、基本配置、完成接口、继续添加
-###springboot-vue-demo（已跑通）
-[视频教学](https://www.bilibili.com/video/BV14y4y1M7Nc/?spm_id_from=333.337.search-card.all.click&vd_source=97cfd40444b798b8f268faf7fc3dd004)
+##搭建云JAVA环境
 **软件配置**
 JDK1.8
 node16
 mysql8
-**云服务器部署**
+**云服务器**
+centos7.9
+**账号**
+云服务器 root 33337z3337S
+ftp ftp 123456
+公网IP 59.110.229.72
+ftp:\\59.110.229.72\
+###步骤
+[前后端分离 -- SpringBoot + Vue实战项目 部署至阿里云服务器](https://developer.aliyun.com/article/933729#slide-2)
+1. [安装宝塔面板](https://www.yunfuwuqiba.com/aliyun/2050.html)，也可不安装
+```
+yum install -y wget && wget -O install.sh http://download.bt.cn/install/install_6.0.sh && sh install.sh
+```
+外网面板地址: https://59.110.229.72:15930/406ce493
+内网面板地址: https://172.30.243.122:15930/406ce493
+username: ma4b2yqm
+password: 4e61b890
+
+2. windows终端登录服务器
+ssh root@59.110.229.72
+若服务器重置先执行ssh-keygen -R 59.110.229.72
+3. 安装JDK
+执行以下命令，查看yum源中JDK版本。
+yum list java*
+执行以下命令，使用yum安装JDK1.8。
+yum -y install java-1.8.0-openjdk*
+执行以下命令，查看是否安装成功。
+java -version
+
+4. 安装MySQL数据库
+```
+wget http://dev.mysql.com/get/mysql57-community-release-el7-10.noarch.rpm
+yum -y install mysql57-community-release-el7-10.noarch.rpm
+yum -y install mysql-community-server --nogpgcheck
+```
+5. 安装Tomcat
+```
+wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.0.30/bin/apache-tomcat-8.0.30.tar.gz
+tar -zxvf apache-tomcat-8.0.30.tar.gz
+mv apache-tomcat-8.0.30 /usr/local/Tomcat8.0
+chmod +x /usr/local/Tomcat8.0/bin/*.sh
+sed -i 's/Connector port="8080"/Connector port="80"/' /usr/local/Tomcat8.0/conf/server.xml
+```
+启动Tomcat
+/usr/local/Tomcat8.0/bin/./startup.sh
+关闭Tomcat
+/usr/local/Tomcat8.0/bin/./shutdown.sh
+
+5. 安装Nginx服务
+
+安装Nginx运行所需要的插件。
+    a.  安装gcc
+yum -y install gcc
+    b.  安装pcre。
+yum install -y pcre pcre-devel
+    c.  安装zlib。
+yum install -y zlib zlib-devel
+
+下载Nginx安装包。
+wget http://nginx.org/download/nginx-1.17.10.tar.gz
+解压Nginx安装包。
+tar -zxvf nginx-1.17.10.tar.gz
+编译安装Nginx。
+cd nginx-1.17.10
+./configure
+make && make install
+启动Nginx。
+cd /usr/local/nginx/
+sbin/nginx
+关闭Nginx。
+ ./nginx -s stop 或者ps -ef | grep nginx , kill -9 XXX
+
+###打包上传
+1. 前端
+cd /home/user/server
+配置
+vim dist/static/config.js
+修改公网IP
+dist上传到pc里
+2. 后端
+将prod的localhost修改为公网IP
+clean compile package
+上传target里的jar包到api目录
+nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod &
+查看
+tailf nohup.out
+3. 配置nginx跨域
+cd /usr/local/nginx/
+vim conf/nginx.conf
+```
+        location / {
+            root   /work/class_manager/pc/dist;
+            index  index.html index.htm;
+            #开启后不会导致刷新白屏
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /springbootajax/ {
+                proxy_pass http://59.110.229.72:22/springbootajax;
+        }
+```
+启动
+./sbin/nginx -s reload
+报错
+nginx启动失败nginx: [error] open() "/usr/local/nginx/logs/nginx.pid" failed (2: No such file or directory)
+4. 数据库
+navicat连接阿里云失败
+
+##小项目
+引入依赖、基本配置、完成接口、继续添加
+###springboot-vue-demo（已跑通）
+[视频教学](https://www.bilibili.com/video/BV14y4y1M7Nc/?spm_id_from=333.337.search-card.all.click&vd_source=97cfd40444b798b8f268faf7fc3dd004)
 1. vue打包，文件图片存储从local修改为服务器的公网ip
 2. maven打包
 3. xtfp上传
 4. 云服务器新建数据库，拷贝本机数据
-5. 启动nginx
-6. 通过公网ip及设置的路由访问相应页面
+5.  启动nginx
+6.  通过公网ip及设置的路由访问相应页面
 
 [先连接数据库再运行springboot](https://blog.csdn.net/qq2523208472/article/details/89366264)
 
