--- a/发布流程.md
+++ b/发布流程.md
@@ -94,10 +94,28 @@ centos操作系统
 
 #实战演练
 搭建一个基础工程，实现网站可访问，数据存储和发送网络请求等，学习怎么设计接口，信息加密，网络安全
+##小项目
+引入依赖、基本配置、完成接口、继续添加
+###springboot-vue-demo（已跑通）
+[视频教学](https://www.bilibili.com/video/BV14y4y1M7Nc/?spm_id_from=333.337.search-card.all.click&vd_source=97cfd40444b798b8f268faf7fc3dd004)
+1. vue打包，config.js文件图片存储从local修改为服务器的公网ip
+2. maven打包
+3. xtfp上传
+4. 云服务器新建数据库，拷贝本机数据
+5.  启动nginx
+6.  通过公网ip及设置的路由访问相应页面
 
+[先连接数据库再运行springboot](https://blog.csdn.net/qq2523208472/article/details/89366264)
+
+###springboot+vue
+[视频链接](https://www.bilibili.com/video/BV1PQ4y1P7hZ/?p=1&vd_source=97cfd40444b798b8f268faf7fc3dd004)
+[笔记](https://blog.csdn.net/weixin_43247803/article/details/113666136)
+
+###登录验证
+[实现用户登录拦截并验证](https://mp.weixin.qq.com/s?__biz=MzIxMjU5NjEwMA%3D%3D&chksm=97413d21a036b43759a4c7525529d836c7bd121ccb7156ddcc2a30d230f97c04a529ab3b9e15&idx=1&mid=2247506378&scene=21&sn=f2f647af608b61687659df4674acdcb6#wechat_redirect)
 
 ##环境配置
-JDK20\1.8
+JDK20 1.8
 TOMCAT10
 NODE16
 
@@ -116,125 +134,129 @@ centos7.9
 **账号**
 云服务器 root 33337z3337S
 ftp ftp 123456
+VNC 3337zS
 公网IP 59.110.229.72
 ftp:\\59.110.229.72\
 ###步骤
 [前后端分离 -- SpringBoot + Vue实战项目 部署至阿里云服务器](https://developer.aliyun.com/article/933729#slide-2)
 1. [安装宝塔面板](https://www.yunfuwuqiba.com/aliyun/2050.html)，也可不安装
-```
-yum install -y wget && wget -O install.sh http://download.bt.cn/install/install_6.0.sh && sh install.sh
-```
-外网面板地址: https://59.110.229.72:15930/406ce493
-内网面板地址: https://172.30.243.122:15930/406ce493
-username: ma4b2yqm
-password: 4e61b890
+    ```
+    yum install -y wget && wget -O install.sh http://download.bt.cn/install/install_6.0.sh && sh install.sh
+    ```
+    外网面板地址: https://59.110.229.72:15930/406ce493
+    内网面板地址: https://172.30.243.122:15930/406ce493
+    username: ma4b2yqm
+    password: 4e61b890
 
 2. windows终端登录服务器
 ssh root@59.110.229.72
 若服务器重置先执行ssh-keygen -R 59.110.229.72
 3. 安装JDK
-执行以下命令，查看yum源中JDK版本。
-yum list java*
-执行以下命令，使用yum安装JDK1.8。
-yum -y install java-1.8.0-openjdk*
-执行以下命令，查看是否安装成功。
-java -version
+   - 执行以下命令，查看yum源中JDK版本。
+   yum list java*
+   - 执行以下命令，使用yum安装JDK1.8。
+   yum -y install java-1.8.0-openjdk*
+   - 执行以下命令，查看是否安装成功。
+   java -version
 
 4. 安装MySQL数据库
-```
-wget http://dev.mysql.com/get/mysql57-community-release-el7-10.noarch.rpm
-yum -y install mysql57-community-release-el7-10.noarch.rpm
-yum -y install mysql-community-server --nogpgcheck
-```
+    ```
+    wget http://dev.mysql.com/get/mysql57-community-release-el7-10.noarch.rpm
+    yum -y install mysql57-community-release-el7-10.noarch.rpm
+    yum -y install mysql-community-server --nogpgcheck
+    ```
 5. 安装Tomcat
-```
-wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.0.30/bin/apache-tomcat-8.0.30.tar.gz
-tar -zxvf apache-tomcat-8.0.30.tar.gz
-mv apache-tomcat-8.0.30 /usr/local/Tomcat8.0
-chmod +x /usr/local/Tomcat8.0/bin/*.sh
-sed -i 's/Connector port="8080"/Connector port="80"/' /usr/local/Tomcat8.0/conf/server.xml
-```
-启动Tomcat
-/usr/local/Tomcat8.0/bin/./startup.sh
-关闭Tomcat
-/usr/local/Tomcat8.0/bin/./shutdown.sh
+    ```
+    wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.0.30/bin/apache-tomcat-8.0.30.tar.gz
+    tar -zxvf apache-tomcat-8.0.30.tar.gz
+    mv apache-tomcat-8.0.30 /usr/local/Tomcat8.0
+    chmod +x /usr/local/Tomcat8.0/bin/*.sh
+    sed -i 's/Connector port="8080"/Connector port="80"/' /usr/local/Tomcat8.0/conf/server.xml
+    ```
+    - 启动Tomcat
+    /usr/local/Tomcat8.0/bin/./startup.sh
+    - 关闭Tomcat
+    /usr/local/Tomcat8.0/bin/./shutdown.sh
 
-5. 安装Nginx服务
+6. 安装Nginx服务
+   - 安装Nginx运行所需要的插件。
+       a.  安装gcc
+   yum -y install gcc
+       b.  安装pcre。
+   yum install -y pcre pcre-devel
+       c.  安装zlib。
+   yum install -y zlib zlib-devel
 
-安装Nginx运行所需要的插件。
-    a.  安装gcc
-yum -y install gcc
-    b.  安装pcre。
-yum install -y pcre pcre-devel
-    c.  安装zlib。
-yum install -y zlib zlib-devel
-
-下载Nginx安装包。
-wget http://nginx.org/download/nginx-1.17.10.tar.gz
-解压Nginx安装包。
-tar -zxvf nginx-1.17.10.tar.gz
-编译安装Nginx。
-cd nginx-1.17.10
-./configure
-make && make install
-启动Nginx。
-cd /usr/local/nginx/
-sbin/nginx
-关闭Nginx。
- ./nginx -s stop 或者ps -ef | grep nginx , kill -9 XXX
+   - 下载Nginx安装包。
+   wget http://nginx.org/download/nginx-1.17.10.tar.gz
+   - 解压Nginx安装包。
+   tar -zxvf nginx-1.17.10.tar.gz
+   - 编译安装Nginx。
+   cd nginx-1.17.10
+   ./configure
+   make && make install
+   - 启动Nginx。
+   cd /usr/local/nginx/
+   sbin/nginx
+   - 关闭Nginx。
+    ./nginx -s stop 或者ps -ef | grep nginx , kill -9 XXX
 
 ###打包上传
 1. 前端
-cd /home/user/server
-配置
-vim dist/static/config.js
-修改公网IP
-dist上传到pc里
+   >cd /home/user/server
+    修改公网IP
+    vim dist/static/config.js
+    上传dist到pc里
 2. 后端
-将prod的localhost修改为公网IP
-clean compile package
-上传target里的jar包到api目录
-nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod &
-查看
-tailf nohup.out
+    >将prod的localhost修改为公网IP
+    clean compile package
+    上传target里的jar包到api目录
+    cd /root/work/class_manager/api
+    执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod &
+    查看:tailf nohup.out
+    ctrl c重新进入控制台
 3. 配置nginx跨域
-cd /usr/local/nginx/
-vim conf/nginx.conf
-```
-        location / {
-            root   /work/class_manager/pc/dist;
-            index  index.html index.htm;
-            #开启后不会导致刷新白屏
-            try_files $uri $uri/ /index.html;
-        }
+   >cd /usr/local/nginx/
+    vim conf/nginx.conf
+    ```vim
+            location / {
+                root   /work/class_manager/pc/dist;
+                index  index.html index.htm;
+                #开启后不会导致刷新白屏
+                try_files $uri $uri/ /index.html;
+            }
 
-        location /springbootajax/ {
-                proxy_pass http://59.110.229.72:22/springbootajax;
-        }
-```
-启动
-./sbin/nginx -s reload
-报错
-nginx启动失败nginx: [error] open() "/usr/local/nginx/logs/nginx.pid" failed (2: No such file or directory)
-4. 数据库
-navicat连接阿里云失败
+            location /api {
+                    proxy_pass http://59.110.229.72:22/;
+            }
 
-##小项目
-引入依赖、基本配置、完成接口、继续添加
-###springboot-vue-demo（已跑通）
-[视频教学](https://www.bilibili.com/video/BV14y4y1M7Nc/?spm_id_from=333.337.search-card.all.click&vd_source=97cfd40444b798b8f268faf7fc3dd004)
-1. vue打包，文件图片存储从local修改为服务器的公网ip
-2. maven打包
-3. xtfp上传
-4. 云服务器新建数据库，拷贝本机数据
-5.  启动nginx
-6.  通过公网ip及设置的路由访问相应页面
+            location /springbootajax/ {
+                    proxy_pass http://59.110.229.72:22/springbootajax;
+            }
+    ```
+    >启动nginx
+    ./sbin/nginx -s reload或者cd /usr/local/nginx/，sbin/nginx
+    报错nginx启动失败nginx: [error] open() "/usr/local/nginx/logs/nginx.pid" failed (2: No such file or directory)
+    报错nginx: [emerg] still could not bind()
+    解决办法：
+    根据Nginx配置文件查看配置的端口（本文中使用的是80端口），然后根据端口查看端口占用情况
+    netstat -ntlp|grep 80
+    使用kill -9 XXX命令杀死占用进程，之后重新启动Nginx
 
-[先连接数据库再运行springboot](https://blog.csdn.net/qq2523208472/article/details/89366264)
+    前端页面始终无法打开，nginx 500 internal server error。
+    有两种可能：nginx未启动或跨域配置不对；端口实际上没有开放
 
-###springboot+vue
-[视频链接](https://www.bilibili.com/video/BV1PQ4y1P7hZ/?p=1&vd_source=97cfd40444b798b8f268faf7fc3dd004)
-[笔记](https://blog.csdn.net/weixin_43247803/article/details/113666136)
+1. 数据库
+   service mysqld start
+   mysql -u root -p
+    [navicat连接](https://blog.csdn.net/nw_ningwang/article/details/76218997)
+    新建springboot-vye数据库并导入数据
 
-###登录验证
-[实现用户登录拦截并验证](https://mp.weixin.qq.com/s?__biz=MzIxMjU5NjEwMA%3D%3D&chksm=97413d21a036b43759a4c7525529d836c7bd121ccb7156ddcc2a30d230f97c04a529ab3b9e15&idx=1&mid=2247506378&scene=21&sn=f2f647af608b61687659df4674acdcb6#wechat_redirect)
+    navicat连接阿里云失败，因为云服务器数据库没有启动
+    报错Access denied for user 'root'
+    解决方案：
+    vim /etc/my.cnf文件；
+    在[mysqld]后添加skip-grant-tables（登录时跳过权限检查）
+
+
+    
