--- a/发布流程.md
+++ b/发布流程.md
@@ -125,10 +125,13 @@ NODE16
 [python项目nginx](https://blog.csdn.net/MeiJin_/article/details/128010946?spm=1001.2101.3001.6650.2&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-2-128010946-blog-82718781.235%5Ev28%5Epc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-2-128010946-blog-82718781.235%5Ev28%5Epc_relevant_default&utm_relevant_index=3)
 
 ##搭建云JAVA环境
+服务器试用5.16到期
 **软件配置**
 JDK1.8
 node16
 mysql8
+注意：
+高版本IDEA(2021及之后版本)无法在Plugins中搜索到Lombok插件
 **云服务器**
 centos7.9
 **账号**
@@ -203,13 +206,13 @@ ssh root@59.110.229.72
 
 ###打包上传
 1. 前端
-   >cd /home/user/server
+   >cd /root/work/class_manager/pc
     修改公网IP
     vim dist/static/config.js
     上传dist到pc里
 2. 后端
     >将prod的localhost修改为公网IP
-    clean compile package
+    执行clean compile package
     上传target里的jar包到api目录
     cd /root/work/class_manager/api
     执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod &
@@ -218,6 +221,7 @@ ssh root@59.110.229.72
 3. 配置nginx跨域
    >cd /usr/local/nginx/
     vim conf/nginx.conf
+    注意端口号和IP
     ```vim
             location / {
                 root   /work/class_manager/pc/dist;
@@ -227,11 +231,11 @@ ssh root@59.110.229.72
             }
 
             location /api {
-                    proxy_pass http://59.110.229.72:22/;
+                    proxy_pass http://localhost:9090/;
             }
 
             location /springbootajax/ {
-                    proxy_pass http://59.110.229.72:22/springbootajax;
+                    proxy_pass http://59.110.229.72:9090/springbootajax;
             }
     ```
     >启动nginx
@@ -239,18 +243,18 @@ ssh root@59.110.229.72
     报错nginx启动失败nginx: [error] open() "/usr/local/nginx/logs/nginx.pid" failed (2: No such file or directory)
     报错nginx: [emerg] still could not bind()
     解决办法：
-    根据Nginx配置文件查看配置的端口（本文中使用的是80端口），然后根据端口查看端口占用情况
+    ngin已开启或者根据Nginx配置文件查看配置的端口（本文中使用的是80端口），然后根据端口查看端口占用情况
     netstat -ntlp|grep 80
     使用kill -9 XXX命令杀死占用进程，之后重新启动Nginx
 
     前端页面始终无法打开，nginx 500 internal server error。
     有两种可能：nginx未启动或跨域配置不对；端口实际上没有开放
 
-1. 数据库
+4. 数据库
    service mysqld start
    mysql -u root -p
     [navicat连接](https://blog.csdn.net/nw_ningwang/article/details/76218997)
-    新建springboot-vye数据库并导入数据
+    新建springboot-vue数据库并导入数据
 
     navicat连接阿里云失败，因为云服务器数据库没有启动
     报错Access denied for user 'root'
@@ -259,4 +263,18 @@ ssh root@59.110.229.72
     在[mysqld]后添加skip-grant-tables（登录时跳过权限检查）
 
 
-    
+开始行动
+1. 找一个超现实的理由——精神的力量
+2. 每天做出选择——选择的力量
+   首先投资于教育。实际上，你所拥有的唯一真正的资产就是你的头脑，这是我们能控制的最强有力的工具。
+   如果想学习某些新东西，那你就要犯些错误，只有这样才能充分理解你所学习的知识。
+3. 慎重地选择朋友——关系的力量
+   注意：不要听贫穷的或是胆小的人的话。如果听了他们的话，你最终也会成为“小鸡式”的人。
+   明智的投资者往往会购买一项不被大众看好的投资，他们懂得利润在购买时已经确定，而不是在售出时获得的，而不是在出售时获得的。他们并不计较市场时机，会耐心等待投资的增值。
+4. 掌握一种模式，然后再学习一种新的模式——快速学习的力量
+   你学到了什么，就会成为什么样的人。
+   你学到的东西再多都不算多，因为当你学到的时候已经过时了。问题在于你学的有多快，这种技能是无价之宝。如果你想赚钱，寻找一条捷径是非常关键的。
+5. 首先支付自己——自律的力量
+   生活推着你转。
+   现金流管理、人事管理、个人时间管理
+   首先不能陷入债务中。当我偶尔资金短缺时，我仍会先支付自己，但我都会还清债务，不会陷入债务危机。
