--- a/常用命令.md
+++ b/常用命令.md
@@ -1,11 +1,28 @@
 ##nginx常用命令
+启动nginx
+./nginx -s reload或者cd /usr/local/nginx/sbin/，./nginx
 |命令	|说明|
 | :----- | :----- |
 |nginx -v	|显示版本信息并退出|
 |nginx -V|	示版本和配置选项信息，然后退出|
-|nginx -t|	检查配置文件nginx.conf|
-|nginx -c /opt/nginx/conf/nginx.conf	|启动nginx服务|
+|nginx -c /opt/nginx/conf/nginx.conf	|检查配置文件nginx.conf|
 |nginx -s reopen	|重启Nginx|
+|ps aux|grep nginx	|检查nginx服务|
 |nginx -s reload	|重新加载Nginx配置文件，然后以优雅的方式重启Nginx|
 |nginx -s stop	|强制停止Nginx服务|
 |nginx -s quit	|优雅地停止Nginx服务|
+
+配置nginx跨域
+   >cd /usr/local/nginx/
+    vim conf/nginx.conf
+
+##mysql常用命令
+service mysqld start
+service mysqld shutdown
+net stop MySQL
+net start MySQL
+mysql -u root -p
+show databases;
+create database XXX;
+use database XXX;
+exit
