--- a/发布流程.md
+++ b/发布流程.md
@@ -13,6 +13,7 @@ SwitchHosts管理不同环境的host
 可以通过设置不同的配置文件、使用虚拟机、利用容器化技术(如Docker)来实现环境隔离。此外，还可以创建独立的数据库和存储环境，以确保开发人员不会误操作生产数据。
 
 ##部署流程
+[实战在两台服务器部署项目](https://blog.csdn.net/weter_drop/article/details/90445605)
 [个人Web项目上线教程](https://blog.csdn.net/u012183426/article/details/82718781?spm=1001.2101.3001.6661.1&utm_medium=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-82718781-blog-90137375.235%5Ev27%5Epc_relevant_3mothn_strategy_and_data_recovery&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-82718781-blog-90137375.235%5Ev27%5Epc_relevant_3mothn_strategy_and_data_recovery&utm_relevant_index=1)
 
 将java web上线，部署到公网，让所有人都可以访问
@@ -112,17 +113,16 @@ centos操作系统
 [笔记](https://blog.csdn.net/weixin_43247803/article/details/113666136)
 
 ###登录验证
-[实现用户登录拦截并验证](https://mp.weixin.qq.com/s?__biz=MzIxMjU5NjEwMA%3D%3D&chksm=97413d21a036b43759a4c7525529d836c7bd121ccb7156ddcc2a30d230f97c04a529ab3b9e15&idx=1&mid=2247506378&scene=21&sn=f2f647af608b61687659df4674acdcb6#wechat_redirect)
+
 
 ##环境配置
-JDK20 1.8
+JDK20  **1.8**
 TOMCAT10
 NODE16
 
 [JavaWeb项目打包上线简单流程](https://blog.csdn.net/yumenghao212/article/details/122585695?spm=1001.2101.3001.6650.8&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7ERate-8-122585695-blog-49205901.235%5Ev28%5Epc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7ERate-8-122585695-blog-49205901.235%5Ev28%5Epc_relevant_default&utm_relevant_index=9)
 [web项目打成war包的三种方式](https://blog.csdn.net/cm15835106905/article/details/107927847?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_baidulandingword~default-4-107927847-blog-122585695.235^v28^pc_relevant_default&spm=1001.2101.3001.4242.3&utm_relevant_index=7)
 [JDK+Tomcat+MySQL Linux部署上线](https://blog.csdn.net/syc000666/article/details/128281617?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_baidulandingword~default-0-128281617-blog-128010946.235^v28^pc_relevant_default&spm=1001.2101.3001.4242.1&utm_relevant_index=3)
-[python项目nginx](https://blog.csdn.net/MeiJin_/article/details/128010946?spm=1001.2101.3001.6650.2&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-2-128010946-blog-82718781.235%5Ev28%5Epc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-2-128010946-blog-82718781.235%5Ev28%5Epc_relevant_default&utm_relevant_index=3)
 
 ##搭建云JAVA环境
 服务器试用5.16到期
@@ -206,10 +206,12 @@ ssh root@59.110.229.72
 
 ###打包上传
 1. 前端
-   >cd /root/work/class_manager/pc
-    修改公网IP
+   >public/statuc/config.js修改公网IP
+   npm run build打包
+   cd /root/work/class_manager/pc
+   上传dist到pc里
     vim dist/static/config.js
-    上传dist到pc里
+    
 2. 后端
     >将prod的localhost修改为公网IP
     执行clean compile package
@@ -218,6 +220,10 @@ ssh root@59.110.229.72
     执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod &
     查看:tailf nohup.out
     ctrl c重新进入控制台
+
+报错：nohup: ignoring input and appending output to ‘nohup.out’
+还未解决
+
 3. 配置nginx跨域
    >cd /usr/local/nginx/
     vim conf/nginx.conf
@@ -253,7 +259,7 @@ ssh root@59.110.229.72
 4. 数据库
    service mysqld start
    mysql -u root -p
-    [navicat连接](https://blog.csdn.net/nw_ningwang/article/details/76218997)
+    [navicat远程连接云数据库](https://blog.csdn.net/nw_ningwang/article/details/76218997)
     新建springboot-vue数据库并导入数据
 
     navicat连接阿里云失败，因为云服务器数据库没有启动
@@ -262,19 +268,9 @@ ssh root@59.110.229.72
     vim /etc/my.cnf文件；
     在[mysqld]后添加skip-grant-tables（登录时跳过权限检查）
 
+    
 
-开始行动
-1. 找一个超现实的理由——精神的力量
-2. 每天做出选择——选择的力量
-   首先投资于教育。实际上，你所拥有的唯一真正的资产就是你的头脑，这是我们能控制的最强有力的工具。
-   如果想学习某些新东西，那你就要犯些错误，只有这样才能充分理解你所学习的知识。
-3. 慎重地选择朋友——关系的力量
-   注意：不要听贫穷的或是胆小的人的话。如果听了他们的话，你最终也会成为“小鸡式”的人。
-   明智的投资者往往会购买一项不被大众看好的投资，他们懂得利润在购买时已经确定，而不是在售出时获得的，而不是在出售时获得的。他们并不计较市场时机，会耐心等待投资的增值。
-4. 掌握一种模式，然后再学习一种新的模式——快速学习的力量
-   你学到了什么，就会成为什么样的人。
-   你学到的东西再多都不算多，因为当你学到的时候已经过时了。问题在于你学的有多快，这种技能是无价之宝。如果你想赚钱，寻找一条捷径是非常关键的。
-5. 首先支付自己——自律的力量
-   生活推着你转。
-   现金流管理、人事管理、个人时间管理
-   首先不能陷入债务中。当我偶尔资金短缺时，我仍会先支付自己，但我都会还清债务，不会陷入债务危机。
+连恩说“能够领悟到自己不一定是他人认为的那样，是了不起的成就。这就是自我身份认同。”
+属性赋予等同于命令。
+与其直接肯定人生发生的所有事情都有意义，不如想办法超越不合理，努力把人生变得有意义，这才是有意义的人生。
+我们在思考怎么活下去的时候，需要的不是追认现实，而是可以超越现实的努力，无论现实的状态如何让=，都要追求理想。
