--- a/技术选型.md
+++ b/技术选型.md
@@ -32,10 +32,15 @@ IIS+ASP
 https://blog.csdn.net/m0_45406092/article/details/114035427
 
 ##服务器
+服务器可为工作站以及PC提供各种服务，包括网络通信服务、文件共享服务、硬件共享服务以及各种资源服务。
+工作站在获取服务器各种资源的同时也可以帮服务器分流计算等任务。
+服务器和工作站的申请要求一样高吗？只是用于备份的话，可否申请物理机工作站？申请流程
+
 Web服务器和数据库服务器都是企业最常见的应用。应用程序要求CPU强，数据库服务器要求内存大
 ###Web服务器
 其实web服务器是一个性能追求性服务器，对web服务器配置的要求主要取决于web的访问量，具体安装何种web应用，Apache或IIS，对服务器的硬件配置影响不大。以每秒200个用户并发访问量为例，推荐服务器HP DL 160 Gen9 1U机架式服务器，配置为：Intel Xeon E5-2609 V3*1，16G内存，3*600G 10K SAS硬盘，双端口1GB网卡，1+1冗余电源。
 云服务器4核CPU/8G内存/8M公网带宽	APP、视频、购物类网站，ERP系统，大数据及实时在线或离线分析、深度学习、批量计算、视频编码等
+Web服务器对硬件要求不高，甚至一般的硬件配置（2颗4核、8G内存、1T硬盘）即可满足需求，如果后期Web服务访问量上升，只需要新增同等配置的服务器加入负载均衡集群即可实现Web服务的性能扩展。
 https://www.zhihu.com/question/26708830?utm_id=0
 
 **常用的web服务器:**
@@ -45,7 +50,9 @@ Apache、IIS、Nginx、Tomcat等
 Nginx:静态HTTP服务器,反向代理器，负载均衡，解决跨域的问题。比如我们向一台服务器的80端口发送了请求，该请求首先由Nginx监听到，其接受到请求内容后再转发给其他服务器，其他服务器处理完后再将结果传送给Nginx，最后由Nginx来统一返回给初始请求端。项目部署在不同的服务器上，但是通过统一的域名进入，nginx则对请求进行分发，减轻了服务器的压力。
 
 ###应用服务器
-提供处理逻辑的应用容器，这里的应用很多，如果java应用、C#应用、ruby应用等。应用服务器提供访问商业逻辑的途径以供客户端应用程序使用。
+承担了功能和计算实现。提供处理逻辑的应用容器，这里的应用很多，如果java应用、C#应用、ruby应用等。应用服务器提供访问商业逻辑的途径以供客户端应用程序使用。
+
+比如Tomcat、Resin、WebLogic、Websphere、jboss等此类。配置的内存在16GB-32GB之间即可，大于32GB的内存配置基本是浪费了。
 
 **常用的应用服务器:**
 Tomcat、Jetty、Weblogic等
@@ -57,6 +64,11 @@ Web服务器只负责处理HTTP协议，只能发送静态页面的内容。而J
 
 ###数据库服务器
 数据库服务是数据读取写入密集型应用，对服务器的内存资源和磁盘性能要比较高，CPU要求其次，如果对数据库可用性要求级别比较高，推荐使用数据库集群方案。以普通ERP数据库为例，用户为200人，数据库大小约100G，推荐配置HP DL380 Gen9服务器，配置：Intel Xeon E5-2620 V3*1，32G内存，4*600G 10K SAS硬盘，标准千兆网卡，1+1冗余电源。
+
+数据服务器对硬件要求最高，主要特征是CPU要足够快、内存足够大，磁盘IO足够快和稳定。比如：MySQL、Oracle服务器要求CPU配置一定要好，最好是双路志强金牌Gold，磁盘最好使用SSD系列。SSD硬盘属于固态硬盘，优点是读写速度快，缺点是价格昂贵。
+
+而Redis服务器主要是内存型应用，所以要求内存一定要足够大，并且可扩展，而对磁盘和CPU要求就没那么高。
+
 云服务器：担心安全性，
 本地：无需网络，后期需要专人维护，可能出现硬件损坏数据丢失
 https://zhuanlan.zhihu.com/p/139712574
@@ -226,3 +238,4 @@ java运行python脚本
 负责完成数据访问，如增删改查 ，日志记录等
 存储层：
 负责数据的存储，如MySQL、缓存Memcache等
+
