--- a/发布流程.md
+++ b/发布流程.md
@@ -249,7 +249,7 @@ ssh root@59.110.229.72
     报错nginx启动失败nginx: [error] open() "/usr/local/nginx/logs/nginx.pid" failed (2: No such file or directory)
     报错nginx: [emerg] still could not bind()
     解决办法：
-    ngin已开启或者根据Nginx配置文件查看配置的端口（本文中使用的是80端口），然后根据端口查看端口占用情况
+    nginx已开启或者根据Nginx配置文件查看配置的端口（本文中使用的是80端口），然后根据端口查看端口占用情况
     netstat -ntlp|grep 80
     使用kill -9 XXX命令杀死占用进程，之后重新启动Nginx
 
@@ -270,7 +270,3 @@ ssh root@59.110.229.72
 
     
 
-连恩说“能够领悟到自己不一定是他人认为的那样，是了不起的成就。这就是自我身份认同。”
-属性赋予等同于命令。
-与其直接肯定人生发生的所有事情都有意义，不如想办法超越不合理，努力把人生变得有意义，这才是有意义的人生。
-我们在思考怎么活下去的时候，需要的不是追认现实，而是可以超越现实的努力，无论现实的状态如何让=，都要追求理想。
