--- a/技术选型.md
+++ b/技术选型.md
@@ -13,6 +13,7 @@ Hibernate有自己的日志统计功能，而MyBatis需要使用Log4j实现。My
   
 * 消息队列
 基于日志设计的**Kafka**，重事务的RabbitMQ。对消息丢失不是特别敏感的话，选择Kafka可以获得更高的性能
+[消息队列对比](https://learnku.com/articles/36282)
 * 文件存储
 Hadoop 的 HDFS 是目前最常用的分布式文件存储方案。除此之外，还有一个开源的轻量级分布式文件系统——**FastDFS**，可以解决大数据量存储和负载均衡等问题。特别适合以中小文件（建议范围：4KB < file_size <500MB）为载体的在线服务，如相册网站、视频网站等等。
 * 日志框架
@@ -45,12 +46,12 @@ https://www.zhihu.com/question/26708830?utm_id=0
 
 **常用的web服务器:**
 Apache、IIS、Nginx、Tomcat等
+[Apache 和 Tomcat ](https://www.zhihu.com/question/37155807)
 
 [Centos上搭建Nginx方法详解](https://zhuanlan.zhihu.com/p/144143399)
 Nginx:静态HTTP服务器,反向代理器，负载均衡，解决跨域的问题。比如我们向一台服务器的80端口发送了请求，该请求首先由Nginx监听到，其接受到请求内容后再转发给其他服务器，其他服务器处理完后再将结果传送给Nginx，最后由Nginx来统一返回给初始请求端。项目部署在不同的服务器上，但是通过统一的域名进入，nginx则对请求进行分发，减轻了服务器的压力。
 可以将 Apache 前面的 Nginx 用作服务器代理。这利用了 Nginx 的快速处理速度和同时建立大量连接的能力。对于静态连接，Nginx 会将文件快速服务到客户端。对于动态内容，例如 Php 文件，Nginx 反向代理服务器会将他们的请求代理到 Apache，然后 Apache 可以处理其结果并返回其呈现的页面。
 
-　　
 
 
 　　对于静态连接，Nginx 会将文件快速服务到客户端。对于动态内容，例如 Php 文件，Nginx 反向代理服务器会将他们的请求代理到 Apache，然后 Apache 可以处理其结果并返回其呈现的页面。
@@ -100,7 +101,7 @@ https://zhuanlan.zhihu.com/p/139712574
 
    <img src="img/日志框架.jpg" width="100%">
 
-   日志级别：ALL < TRACE < DEBUG < INFO < WARN < ERROR <FATAL <OFF
+   日志级别：ALL < TRACE < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
 
 1. 项目的需求是什么？如何选型，难度对比分析
@@ -244,8 +245,3 @@ java运行python脚本
 负责完成数据访问，如增删改查 ，日志记录等
 存储层：
 负责数据的存储，如MySQL、缓存Memcache等
-
-购车争端汇总声明
-1.验车问题：5月7日我在贵店（广成浙迪）付订购买驱逐舰2022 120尊贵，5月9日验车付款，验车时发现车尾灯有细小划痕，前保险杠左右缝隙不对称，左侧突出明显不对齐，贵店经理以正常厂家生产误差为由不予退换。但后来本人观察店内其他比亚迪车均无此类问题，如厂家有误差允许标准，请出示相关标准，对本车进行测定。
-2.提车问题：我购买的新车还未提车，在贵店装潢期间出现损坏，5月13日提车，本人发现左后侧车身有两道划痕，其中一道四五厘米的划痕伤了底漆是裂纹（回家后观察到同侧车框也有明显划痕和很多细小擦痕）。贵店以车辆已上牌为由拒绝退换该受损车辆，当天在店内协商赔偿1000现金+500油卡+两方喷漆，损坏的那面漆终身免费质保，保证能够修复，不会出现色差等肉眼可见瑕疵及后续问题。但是经理以周一（5月15日）赔偿金能到账，损毁漆面可找他处理的口头承诺为由，让我当天签署了协商协议，却没有提供损坏漆面修复的书面承诺，并且补偿现金至今（5月18日）仍拖欠未到账，催促无果。若今日仍不赔付我会400投诉。另外，发现在店内产生的车框擦痕，需重新协商处理和赔偿。
-鉴于贵店的口头承诺和处理效率太低，周六（5月20日）我会去店里，请联系你们经理准备好店内损坏漆面终身修复的书面承诺，若第一次修复仍有瑕疵，需返工并提供误工费赔偿，返工若仍有问题需按照新车损坏折旧费进行赔偿。另买车赠送的5次保养只给了一张保养券，赠品露营餐桌还未交付，请到店时补充4张纸质版保养券（注明免工时费、材料费）和赠品，以免后期因店内人员变动出现问题。
