--- a/技术选型.md
+++ b/技术选型.md
@@ -1,4 +1,13 @@
 #技术选型
+
+在开发软件过程中，一组工具链（toolchain）是一系列用于制作软件程序的工具。这些工具一般一个接一个地运用，上一个工具的输出即是下一个工具的输入，因此得名。但工具链这个词汇也可指涉这些工具并无此相依执行的限制。
+
+通常一个软件开发的工具链由以下组成：
+编译器
+链接器（将源代码/目标代码转换成可执行程序档）
+库（提供与操作系统之间的界面）
+调试器（用来测试、调试所产出的程序）
+
 ##框架组件
 [后端服务开发 - 认识后端框架](https://zhuanlan.zhihu.com/p/87927890)
 https://blog.csdn.net/Listron/article/details/115293172
