--- a/发布流程.md
+++ b/发布流程.md
@@ -281,5 +281,13 @@ ssh root@59.110.229.72
     在[mysqld]后添加skip-grant-tables（登录时跳过权限检查）
 
 
-    
 
+后端工具学习
+环境搭建 代码管理
+通用功能实现
+
+ssh root@10.101.8.37
+zjlab/IieAltq6OuXA
+
+ssh root@10.101.8.38
+zjlab/Pgj9i7itJ7up
