--- a/软件安装配置.md
+++ b/软件安装配置.md
@@ -1,7 +1,57 @@
+##之江云服务器
+之江云服务器
+ssh root@10.101.8.37
+zjlab/IieAltq6OuXA
+
+ssh root@10.101.8.38
+zjlab/Pgj9i7itJ7up
+
 ##maven
 https://mvnrepository
+系统属性配置MAVEN_HOME和PATH
+安装
+修改conf setting.xml配置本地仓库E:\maven\repository
+镜像仓库
+```
+	<mirror>
+		<id>alimaven</id>
+		<mirrorOf>central</mirrorOf>
+		<name>aliyun maven</name>
+		<url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
+	</mirror>
+```
 
-安装，修改conf
-setting.xml配置本地、镜像仓库
+IDEA配置maven:安装3.6.1 maven
 
-IDEA安装3.6.1 maven
+pom.xml
+报错为：不再支持源选项5.请使用6/7 或 更高版本的，
+是因为默认为JDK1.3或1.4，而你的电脑JDK高于1.3
+在src同层目录的  pom.xml中加入：
+<properties>
+<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<maven.compiler.source>18</maven.compiler.source>
+<maven.compiler.target>18</maven.compiler.target>
+</properties>
+
+dependencies
+build plugins
+
+###插件创建工程
+指定项目目录下输入指令
+java工程
+mvn archetype:generate -DgroupId=com.itheima -DartifactId=java-project -
+DarchetypeArtifactId=maven-archetype-quickstart -Dversion=0.0.1-snapshot -
+DinteractiveMode=false
+web工程
+mvn archetype:generate -DgroupId=com.itheima -DartifactId=web-project -
+DarchetypeArtifactId=maven-archetype-webapp -Dversion=0.0.1-snapshot -
+DinteractiveMode=false
+
+
+模拟器用源代码的问题：
+首先要发布单独的python WEB页面，适配其他页面，然后要实现Python和java的数据交互通信，但是传参和返回值可能会很复杂，存在一定风险。需要考虑初始化、刷新、清空页面、缓存等一系列问题
+方案二：把可视化和底层逻辑分离，由前端完成可视化，这需要梳理清楚界面上各个模块参数的交互逻辑。
+
+
+
+
