--- a/软件安装配置.md
+++ b/软件安装配置.md
@@ -8,9 +8,9 @@ zjlab/Pgj9i7itJ7up
 
 ##maven
 https://mvnrepository
-系统属性配置MAVEN_HOME和PATH
-安装
-修改conf setting.xml配置本地仓库E:\maven\repository
+
+1. 安装 系统属性配置MAVEN_HOME和PATH
+2. 修改conf setting.xml配置本地仓库E:\maven\repository
 镜像仓库
 ```
 	<mirror>
@@ -21,20 +21,24 @@ https://mvnrepository
 	</mirror>
 ```
 
-IDEA配置maven:安装3.6.1 maven
+1. IDEA配置maven:安装3.6.1 maven
+idea在settins配置Maven 修改maven版本和路径
+
+1. dependencies  安装依赖
+build plugins 生成插件
 
 pom.xml
 报错为：不再支持源选项5.请使用6/7 或 更高版本的，
 是因为默认为JDK1.3或1.4，而你的电脑JDK高于1.3
 在src同层目录的  pom.xml中加入：
+```
 <properties>
 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 <maven.compiler.source>18</maven.compiler.source>
 <maven.compiler.target>18</maven.compiler.target>
 </properties>
+```
 
-dependencies
-build plugins
 
 ###插件创建工程
 指定项目目录下输入指令
@@ -47,10 +51,6 @@ mvn archetype:generate -DgroupId=com.itheima -DartifactId=web-project -
 DarchetypeArtifactId=maven-archetype-webapp -Dversion=0.0.1-snapshot -
 DinteractiveMode=false
 
-
-模拟器用源代码的问题：
-首先要发布单独的python WEB页面，适配其他页面，然后要实现Python和java的数据交互通信，但是传参和返回值可能会很复杂，存在一定风险。需要考虑初始化、刷新、清空页面、缓存等一系列问题
-方案二：把可视化和底层逻辑分离，由前端完成可视化，这需要梳理清楚界面上各个模块参数的交互逻辑。
 
 
 
