--- a/技术选型.md
+++ b/技术选型.md
@@ -25,6 +25,7 @@ Hibernate有自己的日志统计功能，而MyBatis需要使用Log4j实现。My
 [消息队列对比](https://learnku.com/articles/36282)
 * 文件存储
 Hadoop 的 HDFS 是目前最常用的分布式文件存储方案。除此之外，还有一个开源的轻量级分布式文件系统——**FastDFS**，可以解决大数据量存储和负载均衡等问题。特别适合以中小文件（建议范围：4KB < file_size <500MB）为载体的在线服务，如相册网站、视频网站等等。
+[FastDFS(二)架构及原理](https://juejin.cn/post/7106139841527562254)
 * 日志框架
 Log4j+SLF4J ； LogBack。
 * WEB服务器组件 Tomcat
