--- a/发布流程.md
+++ b/发布流程.md
@@ -197,7 +197,7 @@ ssh root@59.110.229.72
    - 安装Nginx运行所需要的插件。
        a.  安装gcc
    yum -y install gcc
-       b.  安装pcre。
+       b.  安装pcre
    yum install -y pcre pcre-devel
        c.  安装zlib。
    yum install -y zlib zlib-devel
@@ -280,9 +280,4 @@ ssh root@59.110.229.72
     vim /etc/my.cnf文件；
     在[mysqld]后添加skip-grant-tables（登录时跳过权限检查）
 
-
-
-后端工具学习
-环境搭建 代码管理
-通用功能实现
 
