服务器环境配置

--- a/发布流程.md
+++ b/发布流程.md
@@ -218,9 +218,10 @@ ssh root@59.110.229.72
 
 ###打包上传
 1. 前端
+   [前端部署视频](https://www.bilibili.com/video/BV17A411E7aE?p=3&vd_source=97cfd40444b798b8f268faf7fc3dd004)
    >public/statuc/config.js修改公网IP
    npm run build打包
-   cd /root/work/class_manager/pc
+   cd /root/work/pc
    上传dist到pc里
     vim dist/static/config.js
     
@@ -228,32 +229,27 @@ ssh root@59.110.229.72
     >将prod的localhost修改为公网IP
     执行clean compile package
     上传target里的jar包到api目录
-    cd /root/work/class_manager/api
-    执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod &
+    cd /root/work/api
+    执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.config.activate.on-profile=prod &
     查看:tailf nohup.out
     ctrl c重新进入控制台
 
-报错：nohup: ignoring input and appending output to ‘nohup.out’
-还未解决
 
 3. 配置nginx跨域
+   [ubuntu版本](https://blog.csdn.net/weixin_42603784/article/details/110084622)
    >cd /usr/local/nginx/
     vim conf/nginx.conf
     注意端口号和IP
     ```vim
             location / {
-                root   /work/class_manager/pc/dist;
+                root   /root/work/dist;
                 index  index.html index.html;
                 #开启后不会导致刷新白屏
                 try_files $uri $uri/ /index.html;
             }
 
-            location /api {
+            location /api/ {
                     proxy_pass http://localhost:9090/;
-            }
-
-            location /springbootajax/ {
-                    proxy_pass http://59.110.229.72:9090/springbootajax;
             }
     ```
     >启动nginx
@@ -279,5 +275,3 @@ ssh root@59.110.229.72
     解决方案：
     vim /etc/my.cnf文件；
     在[mysqld]后添加skip-grant-tables（登录时跳过权限检查）
-
-
