--- a/常用命令.md
+++ b/常用命令.md
@@ -1,3 +1,14 @@
+##ubuntu常用命令
+ps -ef | grep xxx(某个进程)或者 ps aux|grep xxx（某个进程）可以查看某个进程的pid
+netstat -anp | grep pid号，可以查看到该进程占用的端口号
+杀掉进程kill -9 PID号
+查看已经连接的服务端口（ESTABLISHED）netstat -a
+根据端口查找进程   lsof -i:端口号
+
+##tomcat
+启动tomcat startup.sh
+关闭tomcat shutdown.sh
+
 ##nginx常用命令
 启动nginx
 ./nginx -s reload或者cd /usr/local/nginx/sbin/，./nginx
@@ -25,4 +36,4 @@ mysql -u root -p
 show databases;
 create database XXX;
 use database XXX;
-exit
+exit;
