--- a/服务器环境配置.md
+++ b/服务器环境配置.md
@@ -4,21 +4,30 @@ ssh zjlab@10.101.8.37
 ssh root@10.101.8.37
 csyt
 
+https://xglync.icu/archives/ubuntusshvscodetomcatmaven-da-jian-javaweb-yuan-cheng-kai-fa-huan-jing
+https://blog.csdn.net/qq_45684803/article/details/107349188
+|软件|版本|链接|端口|
+| :-----: | :-----: | :----: | :----: |
+|JDK|17.0.8|[安装链接](https://www.jianshu.com/p/96c03c33d421) https://www.lixian.fun/4605.html [环境变量](https://blog.csdn.net/webrx/article/details/120678805)||
+|Mysql|8.0.33|[链接](https://www.jianshu.com/p/13d71125eec4) |3306|
+|tomcat|10.1.11|[链接](https://xglync.icu/archives/ubuntusshvscodetomcatmaven-da-jian-javaweb-yuan-cheng-kai-fa-huan-jing)|8080|
+|nginx|8|[链接](https://cloud.tencent.com/developer/article/1623233)|80、443|
+|redis||[链接](https://www.jianshu.com/p/96c03c33d421)||
+|node|16|链接||
+
 ssh zjlab@10.101.8.38
 Pgj9i7itJ7up
 ssh root@10.101.8.38
 csyt
+[安装jdk mysql nginx](https://www.jianshu.com/p/96c03c33d421)
+|软件|版本|链接|端口|
+| :-----: | :-----: | :----: | :----: |
+|JDK|1.8|||
+|Mysql|5.7|[链接](https://www.cnblogs.com/blogtech/p/17514887.html) |3306|
+|tomcat|5.5.36|[链接](https://blog.51cto.com/wangguishe/5789152)|8080|
+|nginx||[链接](https://cloud.tencent.com/developer/article/1623233)|80、443|
+|redis||[链接](https://www.jianshu.com/p/96c03c33d421)||
 
-https://xglync.icu/archives/ubuntusshvscodetomcatmaven-da-jian-javaweb-yuan-cheng-kai-fa-huan-jing
-https://blog.csdn.net/qq_45684803/article/details/107349188
-|软件|版本|链接|
-| :-----: | :-----: | :----: |
-|JDK|17.0.8|[安装链接](https://www.jianshu.com/p/96c03c33d421) https://www.lixian.fun/4605.html [环境变量](https://blog.csdn.net/webrx/article/details/120678805)|
-|Mysql|8.0.33|[链接](https://developer.aliyun.com/article/758177) [使用](https://www.jianshu.com/p/13d71125eec4)|
-|tomcat|10.1.11|[链接](https://xglync.icu/archives/ubuntusshvscodetomcatmaven-da-jian-javaweb-yuan-cheng-kai-fa-huan-jing)|
-|nginx|8|[链接](https://cloud.tencent.com/developer/article/1623233)|
-|redis||[链接](https://www.jianshu.com/p/96c03c33d421)|
-|node|16|链接|
 Apache Tomcat 10.1.x基于 Tomcat 10.0.x 构建，并实现Servlet 6.0、JSP 3.1、EL 5.0、WebSocket 2.1和Authentication 3.0规范（Jakarta EE 10 平台所需的版本）。
 
 
@@ -26,15 +35,15 @@ Apache Tomcat 10.1.x基于 Tomcat 10.0.x 构建，并实现Servlet 6.0、JSP 3.1
 tar -xzvf jdk-17_linux-x64_bin.tar.gz
 sudo vim /etc/profile
 ```
-#/usr/local/java是Java的安装路径
-export JAVA_HOME=/usr/local/lib/jdk/jdk-17.0.8
+#/usr/local/lib/jdk/java是Java的安装路径
+export JAVA_HOME=/usr/local/lib/jdk/jdk1.8.0_381
 export JRE_HOME=${JAVA_HOME}/jre
-export CLASSPATH=:${JAVA_HOME}/lib:${JRE_HOME}/lib
-export PATH=${JAVA_HOME}/:${JAVA_HOME}/bin:$PATH
+export CLASSPATH=.:${JAVA_HOME}/lib/dt.jar:${JAVA_HOME}/lib/tools.jar
+export PATH=${JAVA_HOME}/bin:$PATH
+
 
 #高版本
 export JAVA_HOME=/usr/local/lib/jdk/jdk-17.0.8
-export JRE_HOME=/usr/local/lib/jdk/jdk-17.0.8
 export CLASSPATH=.:${JAVA_HOME}/lib
 export .:${JAVA_HOME}/bin:${JAVA_HOME}/lib:$PATH
 ```
@@ -47,6 +56,29 @@ source /etc/profile
 sudo update-alternatives --config java
 
 ###tomcat
+版本8
+```
+cd
+echo 'CATALINA_HOME=/usr/local/lib/apache-tomcat-8.5.92' >> .bashrc
+echo 'PATH=$CATALINA_HOME/bin:$PATH' >> .bashrc
+source .bashrc
+```
+打开启动的脚本文件
+sudo vi ./bin/startup.sh
+
+添加jdk和jre环境变量
+JAVA_HOME=/usr/local/lib/jdk/jdk1.8.0_381
+JRE_HOME=/usr/local/lib/jdk/jdk1.8.0_381/jre
+CLASS_PATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar:$JRE_HOME/lib
+PATH=$JAVA_HOME/bin:$JRE_HOME/bin:$PATH
+TOMCAT_HOME=/opt/apache-tomcat-8.5.92
+
+创建tomcat运行用户
+~# groupadd -g 8080 -o -r tomcat
+~# useradd -M -N -g tomcat -o -r  -s /sbin/nologin -c "tomcat Server" -u 8080  tomcat
+~# chown -R tomcat.tomcat /usr/local/lib/apache-tomcat-8.5.92/
+
+版本10
 tar -xzvf ./apache-tomcat-10.1.11.tar.gz
 rm apache-tomcat-10.1.11.tar.gz
 
@@ -60,50 +92,76 @@ echo 'PATH=$CATALINA_HOME/bin:$PATH' >> .bashrc
 source .bashrc
 ```
 
-##WEB工程
-###maven
-https://mvnrepository
+###mysql
+5.7版本
+deb http://repo.mysql.com/apt/ubuntu/ bionic mysql-apt-config
+deb http://repo.mysql.com/apt/ubuntu/ bionic mysql-5.7
+deb http://repo.mysql.com/apt/ubuntu/ bionic mysql-tools
+deb-src http://repo.mysql.com/apt/ubuntu/ bionic mysql-5.7
 
-1. 安装 系统属性配置MAVEN_HOME和PATH
-2. 修改conf setting.xml配置本地仓库E:\maven\repository
-镜像仓库
+sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 467B942D3A79BD29
+**高版本**
+设置root密码
+查看 mysql 初始的密码策略，
+
+输入 SHOW VARIABLES LIKE ‘validate_password%’; 进行查看
+输入 set global validate_password.policy=LOW; 进行设值，
+输入 set global validate_password.length=6; 进行设值，
 ```
-	<mirror>
-		<id>alimaven</id>
-		<mirrorOf>central</mirrorOf>
-		<name>aliyun maven</name>
-		<url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
-	</mirror>
+use mysql; 
+ 
+update user set authentication_string='' where user='root';      --将字段置为空
+ 
+alter user 'root'@'localhost' identified with mysql_native_password by 'CSYTd@ta'; //修改为mysql_native_password认证方式
 ```
+允许远程连接
 
-1. IDEA配置maven:安装3.6.1 maven
-idea在settins配置Maven 修改maven版本和路径
-
-1. dependencies  安装依赖
-build plugins 生成插件
-
-pom.xml
-报错为：不再支持源选项5.请使用6/7 或 更高版本的，
-是因为默认为JDK1.3或1.4，而你的电脑JDK高于1.3
-在src同层目录的  pom.xml中加入：
 ```
-<properties>
-<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<maven.compiler.source>18</maven.compiler.source>
-<maven.compiler.target>18</maven.compiler.target>
-</properties>
+select host,user,authentication_string,plugin from user;
+update user set Host='%' where User='root';
+FLUSH PRIVILEGES;
+//exit命令退出数据库
+service mysql restart
 ```
+ 第一步：打开防火墙配置文件：vim /etc/sysconfig/iptables
+    第二步：将配置文件中的一行A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT中的80改为3306
+    第三步：重启防火墙：service iptables restart
 
+###打包上传
+1. 前端
+   [前端部署视频](https://www.bilibili.com/video/BV17A411E7aE?p=3&vd_source=97cfd40444b798b8f268faf7fc3dd004)
+   >public/statuc/config.js修改公网IP
+   npm run build打包
+   cd /root/work/pc
+   上传dist到pc里
+    vim dist/static/config.js
+    
+2. 后端
+    >将prod的localhost修改为公网IP
+    执行clean compile package
+    上传target里的jar包到api目录
+    cd /root/work/api
+    执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.config.activate.on-profile=prod &
+    查看:tail nohup.out
+    ctrl c重新进入控制台
 
-###插件创建工程
-指定项目目录下输入指令
-java工程
-mvn archetype:generate -DgroupId=com.itheima -DartifactId=java-project -
-DarchetypeArtifactId=maven-archetype-quickstart -Dversion=0.0.1-snapshot -
-DinteractiveMode=false
-web工程
-mvn archetype:generate -DgroupId=com.itheima -DartifactId=web-project -
-DarchetypeArtifactId=maven-archetype-webapp -Dversion=0.0.1-snapshot -
-DinteractiveMode=false
+3. 配置nginx跨域
+   [ubuntu版本](https://blog.csdn.net/weixin_42603784/article/details/110084622)
+   vim /etc/nginx/nginx.conf
 
+    注意端口号和IP
+    ```vim
+            location / {
+                root   /root/work/dist;
+                index  index.html index.html;
+                #开启后不会导致刷新白屏
+                try_files $uri $uri/ /index.html;
+            }
+
+            location /api/ {
+                    proxy_pass http://localhost:9090/;
+            }
+    ```
+	service nginx reload
+	service nginx restart
 
