服务器环境配置

--- a/服务器环境配置.md
+++ b/服务器环境配置.md
@@ -50,9 +50,7 @@ export .:${JAVA_HOME}/bin:${JAVA_HOME}/lib:$PATH
 source /etc/profile
 
 设置默认版本
-
-设置默认Java版本适用于系统上安装了多个Java版本的情况。首先，列出所有可用的版本。
-
+首先，列出所有可用的版本。
 sudo update-alternatives --config java
 
 ###tomcat
@@ -137,6 +135,7 @@ service mysql restart
     vim dist/static/config.js
     
 2. 后端
+   [移除内置tomcat依赖] (https://blog.csdn.net/P_ning/article/details/106975315) [2]https://blog.csdn.net/weixin_42950079/article/details/104193881
     >将prod的localhost修改为公网IP
     执行clean compile package
     上传target里的jar包到api目录
