服务器环境配置

--- a/技术选型.md
+++ b/技术选型.md
@@ -219,7 +219,8 @@ java运行python脚本
    模型和训练数据、用户信息等需定时更新备份
    应用程序本身、静态资源（主页展示图片、产品介绍，存储在阿里云可容灾）等基本不做修改
    应用服务器和数据库服务器的备份，尽量实现程序运行中间状态的保存。
-4. 容灾方案设计
+4. **容灾方案设计**
+      [MySQL 的主从复制](https://blog.csdn.net/weixin_39722070/article/details/110135393)
 
    备份+切换+运行
    **备份：**
