--- a/服务器环境配置.md
+++ b/服务器环境配置.md
@@ -127,20 +127,21 @@ service mysql restart
 
 ###打包上传
 1. 前端
+      [ubuntu 配置跨域](https://blog.csdn.net/weixin_42603784/article/details/110084622)
    [前端部署视频](https://www.bilibili.com/video/BV17A411E7aE?p=3&vd_source=97cfd40444b798b8f268faf7fc3dd004)
    >public/statuc/config.js修改公网IP
    npm run build打包
    cd /root/work/pc
    上传dist到pc里
-    vim dist/static/config.js
     
 2. 后端
-   [移除内置tomcat依赖] (https://blog.csdn.net/P_ning/article/details/106975315) [2]https://blog.csdn.net/weixin_42950079/article/details/104193881
+   [移除内置tomcat依赖] (https://blog.csdn.net/P_ning/article/details/106975315)
+    [2]https://blog.csdn.net/weixin_42950079/article/details/104193881
     >将prod的localhost修改为公网IP
     执行clean compile package
     上传target里的jar包到api目录
     cd /root/work/api
-    执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.config.activate.on-profile=prod &
+    执行：nohup java -jar springboot-0.0.1-SNAPSHOT.jar --spring.config.activate.on-profile=prod --server.port=9090 &
     查看:tail nohup.out
     ctrl c重新进入控制台
 
@@ -158,7 +159,7 @@ service mysql restart
             }
 
             location /api/ {
-                    proxy_pass http://localhost:9090/;
+                    proxy_pass http://localhost:9090/springboot-0.0.1-SNAPSHOT;
             }
     ```
 	service nginx reload
