服务器环境配置

--- a/技术选型.md
+++ b/技术选型.md
@@ -1,5 +1,4 @@
-#技术选型
-
+#整体架构
 在开发软件过程中，一组工具链（toolchain）是一系列用于制作软件程序的工具。这些工具一般一个接一个地运用，上一个工具的输出即是下一个工具的输入，因此得名。但工具链这个词汇也可指涉这些工具并无此相依执行的限制。
 
 通常一个软件开发的工具链由以下组成：
@@ -8,10 +7,21 @@
 库（提供与操作系统之间的界面）
 调试器（用来测试、调试所产出的程序）
 
-##框架组件
 [后端服务开发 - 认识后端框架](https://zhuanlan.zhihu.com/p/87927890)
-https://blog.csdn.net/Listron/article/details/115293172
-https://cloud.tencent.com/developer/article/1598087
+[Web开发技术架构图及软件开发流程](https://blog.csdn.net/Listron/article/details/115293172)
+
+###各层功能
+展示层：
+负责用户界面设计，如登录页面、开发页面等
+业务层：
+负责业务逻辑处理，如数据管理、模型运行等
+数据层：
+负责完成数据访问，如增删改查 ，日志记录等
+存储层：
+负责数据的存储，如MySQL、缓存Memcache等
+
+#技术选型
+##框架组件
 spring mvc+mybatis更灵活
 SSH(struts核心控制器+spring持久层java Bean对象管理池+hibernate数据库连接映射池)
 Hibernate有自己的日志统计功能，而MyBatis需要使用Log4j实现。MyBatis缓存特性相对Hibernate更高。
@@ -35,41 +45,32 @@ Log4j+SLF4J ； LogBack。
 * 几百MB大文件，海量日志数据 Hadoop Hbase
 
 
-##软件配置
-JDK17-20
-TOMCAT8-10
-WEB服务器Apache（静态HTML）+ JAVA应用服务器Tomcat（动态JSV、Servlet）
-IIS+ASP
-https://blog.csdn.net/m0_45406092/article/details/114035427
+##软件配置方案
+JDK 17-20
+TOMCAT 8-10
+NGINX+WEB服务器Apache（静态HTML）+ JAVA应用服务器Tomcat（动态JSV、Servlet）
+
+可以将 Apache 前面的 Nginx 用作服务器代理。这利用了 Nginx 的快速处理速度和同时建立大量连接的能力。对于静态连接，Nginx 会将文件快速服务到客户端。对于动态内容，例如 Php 文件，Nginx 反向代理服务器会将他们的请求代理到 Apache，然后 Apache 可以处理其结果并返回其呈现的页面。
 
 ##服务器
 服务器可为工作站以及PC提供各种服务，包括网络通信服务、文件共享服务、硬件共享服务以及各种资源服务。
-工作站在获取服务器各种资源的同时也可以帮服务器分流计算等任务。
-服务器和工作站的申请要求一样高吗？只是用于备份的话，可否申请物理机工作站？申请流程
 
 Web服务器和数据库服务器都是企业最常见的应用。应用程序要求CPU强，数据库服务器要求内存大
-###Web服务器
-其实web服务器是一个性能追求性服务器，对web服务器配置的要求主要取决于web的访问量，具体安装何种web应用，Apache或IIS，对服务器的硬件配置影响不大。以每秒200个用户并发访问量为例，推荐服务器HP DL 160 Gen9 1U机架式服务器，配置为：Intel Xeon E5-2609 V3*1，16G内存，3*600G 10K SAS硬盘，双端口1GB网卡，1+1冗余电源。
-云服务器4核CPU/8G内存/8M公网带宽	APP、视频、购物类网站，ERP系统，大数据及实时在线或离线分析、深度学习、批量计算、视频编码等
+###Web服务器（HTTP服务器）
+Web服务器专门处理HTTP请求(request)。对web服务器配置的要求主要取决于web的访问量。
 Web服务器对硬件要求不高，甚至一般的硬件配置（2颗4核、8G内存、1T硬盘）即可满足需求，如果后期Web服务访问量上升，只需要新增同等配置的服务器加入负载均衡集群即可实现Web服务的性能扩展。
-https://www.zhihu.com/question/26708830?utm_id=0
+[根据需求选择WEB服务器](https://www.zhihu.com/question/26708830?utm_id=0)
 
 **常用的web服务器:**
 Apache、IIS、Nginx、Tomcat等
-[Apache 和 Tomcat ](https://www.zhihu.com/question/37155807)
-
-[Centos上搭建Nginx方法详解](https://zhuanlan.zhihu.com/p/144143399)
-Nginx:静态HTTP服务器,反向代理器，负载均衡，解决跨域的问题。比如我们向一台服务器的80端口发送了请求，该请求首先由Nginx监听到，其接受到请求内容后再转发给其他服务器，其他服务器处理完后再将结果传送给Nginx，最后由Nginx来统一返回给初始请求端。项目部署在不同的服务器上，但是通过统一的域名进入，nginx则对请求进行分发，减轻了服务器的压力。
-可以将 Apache 前面的 Nginx 用作服务器代理。这利用了 Nginx 的快速处理速度和同时建立大量连接的能力。对于静态连接，Nginx 会将文件快速服务到客户端。对于动态内容，例如 Php 文件，Nginx 反向代理服务器会将他们的请求代理到 Apache，然后 Apache 可以处理其结果并返回其呈现的页面。
+[Apache 和 Tomcat区别 ](https://blog.csdn.net/m0_45406092/article/details/114035427)
 
 
-
-　　对于静态连接，Nginx 会将文件快速服务到客户端。对于动态内容，例如 Php 文件，Nginx 反向代理服务器会将他们的请求代理到 Apache，然后 Apache 可以处理其结果并返回其呈现的页面。
+Nginx:静态HTTP服务器,反向代理器，负载均衡，解决跨域的问题。
+比如我们向一台服务器的80端口发送了请求，该请求首先由Nginx监听到，其接受到请求内容后再转发给其他服务器，其他服务器处理完后再将结果传送给Nginx，最后由Nginx来统一返回给初始请求端。项目部署在不同的服务器上，但是通过统一的域名进入，nginx则对请求进行分发，减轻了服务器的压力。
 
 ###应用服务器
-承担了功能和计算实现。提供处理逻辑的应用容器，这里的应用很多，如果java应用、C#应用、ruby应用等。应用服务器提供访问商业逻辑的途径以供客户端应用程序使用。
-
-比如Tomcat、Resin、WebLogic、Websphere、jboss等此类。配置的内存在16GB-32GB之间即可，大于32GB的内存配置基本是浪费了。
+应用程序服务器是通过很多协议来为应用程序提供(serves)商业逻辑 (business logic)，承担了功能和计算实现。提供处理逻辑的应用容器，这里的应用很多，如果java应用、C#应用、ruby应用等。配置的内存在16GB-32GB之间即可，大于32GB的内存配置基本是浪费了。
 
 **常用的应用服务器:**
 Tomcat、Jetty、Weblogic等
@@ -80,18 +81,10 @@ WEB服务器一般是通用的，而应用服务器一般是专用的，如Tomca
 Web服务器只负责处理HTTP协议，只能发送静态页面的内容。而JSP，ASP，PHP等动态内容需要通过CGI、FastCGI、ISAPI等接口交给其他程序去处理。这个其他程序就是应用服务器。
 
 ###数据库服务器
-数据库服务是数据读取写入密集型应用，对服务器的内存资源和磁盘性能要比较高，CPU要求其次，如果对数据库可用性要求级别比较高，推荐使用数据库集群方案。以普通ERP数据库为例，用户为200人，数据库大小约100G，推荐配置HP DL380 Gen9服务器，配置：Intel Xeon E5-2620 V3*1，32G内存，4*600G 10K SAS硬盘，标准千兆网卡，1+1冗余电源。
-
-数据服务器对硬件要求最高，主要特征是CPU要足够快、内存足够大，磁盘IO足够快和稳定。比如：MySQL、Oracle服务器要求CPU配置一定要好，最好是双路志强金牌Gold，磁盘最好使用SSD系列。SSD硬盘属于固态硬盘，优点是读写速度快，缺点是价格昂贵。
-
-而Redis服务器主要是内存型应用，所以要求内存一定要足够大，并且可扩展，而对磁盘和CPU要求就没那么高。
-
-云服务器：担心安全性，
-本地：无需网络，后期需要专人维护，可能出现硬件损坏数据丢失
-https://zhuanlan.zhihu.com/p/139712574
+数据库服务是数据读取写入密集型应用，对服务器的内存资源和磁盘性能要比较高，CPU要求其次，如果对数据库可用性要求级别比较高，推荐使用数据库集群方案。以普通ERP数据库为例，用户为200人，数据库大小约100G，推荐配置HP DL380 Gen9服务器，配置：Intel Xeon E5-2620 V3*1，32G内存，4*600G 10K SAS硬盘，标准千兆网卡，1+1冗余电源。磁盘最好使用SSD系列。SSD硬盘属于固态硬盘，优点是读写速度快，缺点是价格昂贵。
 
 
-##通用模块
+##通用模块设计
 ###日志管理系统
 1. 日志管理的作用
    - 记录系统运行过程和详情，并可以进行存储,将系统执行的信息选择性的记录到指定的位置（控制台、文件、数据库）
@@ -220,33 +213,23 @@ java运行python脚本
    应用程序本身、静态资源（主页展示图片、产品介绍，存储在阿里云可容灾）等基本不做修改
    应用服务器和数据库服务器的备份，尽量实现程序运行中间状态的保存。
 4. **容灾方案设计**
+         0级容灾：备份主要针对人为误操作、病毒感染、逻辑错误等因素，用于业务系统的数据恢复，数据备份一般是在同一数据中心进行。
+   **备份**      
       [MySQL 的主从复制](https://blog.csdn.net/weixin_39722070/article/details/110135393)
 
-   备份+切换+运行
-   **备份：**
-   能否对数据加密保存？利用公有云端备份
-   应用由阿里云端或由单机通过网络备份i2Cloud
+   
    数据由数据湖备份
-      0级容灾：备份主要针对人为误操作、病毒感染、逻辑错误等因素，用于业务系统的数据恢复，数据备份一般是在同一数据中心进行。
-   **切换：**
+   **服务器切换：**
    [通过虚拟IP实现服务器容灾的自动切换](https://blog.51cto.com/hujiangtao/1944292)
    定时发送免费ARP可以防止VRRP虚拟IP地址冲突
    当网络中存在VRRP备份组时，需要由VRRP备份组的Master路由器周期性的向网络内的主机发送免费ARP报文，使主机更新本地ARP地址表，确保网络中不会存在与VRRP虚拟IP地址相同的设备。用户可以设定VRRP虚拟IP地址和MAC地址对应关系。
 
    
-##备注
+###算子开发
 算子开发
 算子代码实现：算子计算逻辑及调度的实现。
 算子原型定义规定了在昇腾AI处理器上可运行算子的约束，主要体现算子的数学含义，包含定义算子输入、输出、属性和取值范围，基本参数的校验和shape的推导
 算子工程编译部署：编译自定义算子工程，生成自定义算子安装包并进行自定义算子包的安装，将自定义算子部署到算子库（OPP）。
 算子测试：将自定义算子加载到网络模型中进行运行验证。
 
-展示层：
-负责用户界面设计，如登录页面、开发页面等
-业务层：
-负责业务逻辑处理，如数据管理、模型运行等
-数据层：
-负责完成数据访问，如增删改查 ，日志记录等
-存储层：
-负责数据的存储，如MySQL、缓存Memcache等
 
