--- a/服务器环境配置.md
+++ b/服务器环境配置.md
@@ -1,9 +1,14 @@
-##之江云服务器
-之江云服务器
+##aly服务器
+i-bp1cah1r60ecnue528d8
+ssh zjlab@10.101.8.37
+cs1tAliyun
+##zjy服务器
+
 ssh zjlab@10.101.8.37
 ssh root@10.101.8.37
 csyt
 
+yjt 33337zS.
 https://xglync.icu/archives/ubuntusshvscodetomcatmaven-da-jian-javaweb-yuan-cheng-kai-fa-huan-jing
 https://blog.csdn.net/qq_45684803/article/details/107349188
 |软件|版本|链接|端口|
@@ -11,7 +16,7 @@ https://blog.csdn.net/qq_45684803/article/details/107349188
 |JDK|17.0.8|[安装链接](https://www.jianshu.com/p/96c03c33d421) https://www.lixian.fun/4605.html [环境变量](https://blog.csdn.net/webrx/article/details/120678805)||
 |Mysql|8.0.33|[链接](https://www.jianshu.com/p/13d71125eec4) |3306|
 |tomcat|10.1.11|[链接](https://xglync.icu/archives/ubuntusshvscodetomcatmaven-da-jian-javaweb-yuan-cheng-kai-fa-huan-jing)|8080|
-|nginx|8|[链接](https://cloud.tencent.com/developer/article/1623233)|80、443|
+|nginx|1.18|[链接](https://cloud.tencent.com/developer/article/1623233)|80、443|
 |redis||[链接](https://www.jianshu.com/p/96c03c33d421)||
 |node|16|链接||
 
@@ -125,9 +130,15 @@ service mysql restart
     第二步：将配置文件中的一行A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT中的80改为3306
     第三步：重启防火墙：service iptables restart
 
+###FDFS
+[fastDFS安装、配置、运行检测](https://blog.csdn.net/Zhou_Yulong/article/details/92802617)
+[FastDFS分布式文件系统安装教程](https://blog.csdn.net/weixin_45525272/article/details/107748384?spm=a2c6h.12873639.article-detail.8.412e794baeF6mR)
+[整合Nginx实现网页访问](https://juejin.cn/post/7039626576463413278)
+
 ###打包上传
 1. 前端
       [ubuntu 配置跨域](https://blog.csdn.net/weixin_42603784/article/details/110084622)
+      vim /etc/nginx/nginx.conf
    [前端部署视频](https://www.bilibili.com/video/BV17A411E7aE?p=3&vd_source=97cfd40444b798b8f268faf7fc3dd004)
    >public/statuc/config.js修改公网IP
    npm run build打包
@@ -159,8 +170,10 @@ service mysql restart
             }
 
             location /api/ {
-                    proxy_pass http://localhost:9090/springboot-0.0.1-SNAPSHOT;
+                    proxy_pass http://10.101.8.38:8080/springboot-0.0.1-SNAPSHOT;
             }
     ```
 	service nginx reload
 	service nginx restart
+
+    [反向代理基本配置](https://zhuanlan.zhihu.com/p/514546639)
