--- a/常用命令.md
+++ b/常用命令.md
@@ -10,30 +10,29 @@ netstat -anp | grep pid号，可以查看到该进程占用的端口号
 关闭tomcat shutdown.sh
 
 ##nginx常用命令
-启动nginx
-./nginx -s reload或者cd /usr/local/nginx/sbin/，./nginx
+
 |命令	|说明|
 | :----- | :----- |
 |nginx -v	|显示版本信息并退出|
 |nginx -V|	示版本和配置选项信息，然后退出|
 |nginx -c /opt/nginx/conf/nginx.conf	|检查配置文件nginx.conf|
-|nginx -s reopen	|重启Nginx|
 |ps aux|grep nginx	|检查nginx服务|
-|nginx -s reload	|重新加载Nginx配置文件，然后以优雅的方式重启Nginx|
-|nginx -s stop	|强制停止Nginx服务|
-|nginx -s quit	|优雅地停止Nginx服务|
+|nginx --reload	|重新加载Nginx配置文件|
+|nginx --retart	|重启Nginx|
+|nginx --stop	|强制停止Nginx服务|
+|nginx --quit	|优雅地停止Nginx服务|
 
 配置nginx跨域
    >cd /usr/local/nginx/
     vim conf/nginx.conf
 
 ##mysql常用命令
-service mysqld start
-service mysqld shutdown
-net stop MySQL
-net start MySQL
-mysql -u root -p
-show databases;
-create database XXX;
-use database XXX;
-exit;
+|命令	|说明|
+| :----- | :----- |
+|service mysqld start|启动|
+|service mysqld shutdown|关闭|
+|mysql -u root -p|登录|
+|show databases;||
+|create database XXX;||
+|use database XXX;||
+|exit;	|退出|
