--- a/project/个人项目发布流程.md
+++ b/project/个人项目发布流程.md
@@ -1,15 +1,5 @@
-#开发生产准备
-[项目上线发布流程简介](https://wenliang.blog.csdn.net/article/details/119886193?spm=1001.2101.3001.6650.14&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7ERate-14-119886193-blog-82718781.235%5Ev28%5Epc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7ERate-14-119886193-blog-82718781.235%5Ev28%5Epc_relevant_default&utm_relevant_index=15)
 
-##环境隔离
-开发环境、测试环境、预发环境、线上（生产）环境
-maven
-SwitchHosts管理不同环境的host
-
-可以通过设置不同的配置文件、使用虚拟机、利用容器化技术(如Docker)来实现环境隔离。
-此外，还可以创建独立的数据库和存储环境，以确保开发人员不会误操作生产数据。
-
-##部署流程
+#部署流程
 [阿里云个人Web项目上线教程](https://blog.csdn.net/u012183426/article/details/82718781?spm=1001.2101.3001.6661.1&utm_medium=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-82718781-blog-90137375.235%5Ev27%5Epc_relevant_3mothn_strategy_and_data_recovery&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-82718781-blog-90137375.235%5Ev27%5Epc_relevant_3mothn_strategy_and_data_recovery&utm_relevant_index=1)
 
 
@@ -39,57 +29,6 @@ mysql数据库的数据导出，复制到服务器。
 7.3域名解析教程：http://jingyan.baidu.com/article/676629973f96f454d51b849b.html
 
 8.至此，可以在有网络下访问你的网站（项目）
-
-###域名
-一个域名只能对应一个IP地址，而一个IP却可以对应多个域名。如果使用的是独立IP虚拟主机、vps或者云主机，并且只绑定了一个网站，那么使用IP地址和域名都能访问网站，如果使用的共享IP虚拟主机或者绑定了多个网站，则只能使用域名访问网站。
-
-##上线流程
-项目部署环境一般可分为三种：生产环境，测试环境，开发环境
-三个环境也可以说是系统开发的三个阶段：开发->测试->上线
-
-1. 开发环境：开发环境是程序员们专门用于开发的服务器，配置可以比较随意，为了开发调试方便，一般打开全部错误报告和测试工具，是最基础的环境。开发环境的分支，一般是feature分支。
-**本地主机**
-
-2. 测试环境：一般是克隆一份生产环境的配置，一个程序在测试环境工作不正常，那么肯定不能把它发布到生产服务器上，是开发环境到生产环境的过度环境。测试环境的分支一般是develop分支，部署到公司私有的服务器或者局域网服务器上，主要用于测试是否存在bug，一般会不让用户和其他人看到，并且**测试环境会尽量与生产环境相似**。
-
-3. 生产环境： 生产环境是指正式提供对外服务的，一般会关掉错误报告，打开错误日志，是最重要的环境。部署分支一般为master分支。
-**正式部署服务器**
-
-[SwitchHosts管理不同环境](https://blog.csdn.net/n950814abc/article/details/81327898?spm=1001.2101.3001.6650.7&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-7-81327898-blog-77161561.235%5Ev27%5Epc_relevant_3mothn_strategy_and_data_recovery&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-7-81327898-blog-77161561.235%5Ev27%5Epc_relevant_3mothn_strategy_and_data_recovery&utm_relevant_index=8)
-
-###测试
-一般不用maven项目自带的test，而是用postman进行接口测试
-[WEB测试环境搭建和测试方法大全](https://zhuanlan.zhihu.com/p/431360031)
-###预发布
-https://juejin.cn/post/7137963558528090119
-**开发人员不能直接接触，这是运维人员保障上线质量的最后检查，运维标准也基本等同于生产环境**。
-开发环境中研发人员有时会根据自己需要调整系统参数，如果release的时候仅仅交付了代码并没有指明系统参数修改，这时很容易出问题。
-web项目的预发布环境，一般是单独部署一个代码节点，连接的是生产环境的资源，比如DB，Cache，队列等。通过地址参数，cookie，请求头参数，vpn等方式，让测试人员可以接入这个特定的环境，做正式发布前的整体回归测试。然后还可以在负载均衡层面，接入小部分真实用户流量，观察性能变动和用户反馈，可以确定是否存在隐藏的性能问题和没有测试出来的bug。
-
-
-预发布环境和生产环境：
-1）预发环境中新功能为最新代码，其他功能代码和生产环境一致。
-2）把预发布环境的访问域名设置成和线上环境的不一样，通过配置host来访问预发布环境。
-3）中间件版本需要保持严格的一致（代码版本、数据库版本、中间件版本、依赖库/系统等版本、容器版本）
-4）**线上数据和预发需要的数据不能互相影响。预发布环境一般会连接生产环境的数据库，测试时要注意，以免产生脏数据，影响生产环境的使用。
-5）预发布环境可以安装在生产环境同一个物理机上。**
-
-**Maven环境隔离**
-https://blog.csdn.net/QH_JAVA/article/details/53259412
-
-
-###生产环境
-静态网页文件托管（默认CDN）
-https://www.bilibili.com/video/BV18a4y1Y7e9?p=7&vd_source=97cfd40444b798b8f268faf7fc3dd004
-1. 域名 DNS解析 
-2. 服务器存放网站代码文件、数据库，实体的5000起步
-性能：十几到几百人，最低配置基本能满足
-地域：可以买附近的 CDN负载均衡服务器可以加速访问
-带宽：影响速度可以用CDN，把大文件放到别的云存储上
-IP：最好有独立公网IP，可以买云服务上的
-云服务器 虚拟主机
-centos操作系统
-1. 备案（服务器供应商提供）
 
 #实战演练
 
