--- a/project/技术选型.md
+++ b/project/技术选型.md
@@ -45,7 +45,7 @@ Log4j+SLF4J ； LogBack。
 * 几百MB大文件，海量日志数据 Hadoop Hbase
 
 
-##软件配置方案
+##环境配置方案
 JDK 17-20
 TOMCAT 8-10
 NGINX+WEB服务器Apache（静态HTML）+ JAVA应用服务器Tomcat（动态JSV、Servlet）
@@ -141,6 +141,7 @@ Web服务器只负责处理HTTP协议，只能发送静态页面的内容。而J
 
 3. 日志存储方式
    保存15天，文件形式存储
+   bug日志2个月
    日志是按照错误级别分级的，常见的错误级别有 FATAL / WARNING / NOTICE / DEBUG / TRACE 5 种类型。通常我们会在项目里面定义一个日志打印级别，高于这个级别的错误日志会数据落盘。
 
 ###监控管理
@@ -150,6 +151,8 @@ Web服务器只负责处理HTTP协议，只能发送静态页面的内容。而J
    - 实时web查看日志
    - 日志分级，按一定格式和顺序存储
    - 运维人员可读懂
+  
+  
   
 2. 怎么把logback用到监控系统中？
 3. 调研
@@ -189,7 +192,8 @@ pyscript
 https://blog.csdn.net/jinjiangongzuoshi/article/details/124833923
 https://www.freecodecamp.org/chinese/news/pyscript-python-front-end-framework/
 
-java运行python脚本
+**java运行python脚本**
+[JAVA web调用执行python脚本程序的四种方式](https://blog.csdn.net/Ichimaru_Gin_/article/details/50814791)
 [JAVA调用Python的几种方法](https://www.cnblogs.com/wuwuyong/p/10600749.html)
 [SpringBoot（Java）调用Python脚本及传参](https://blog.csdn.net/qq_37331119/article/details/127508383?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-127508383-blog-109708115.235%5Ev28%5Epc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-127508383-blog-109708115.235%5Ev28%5Epc_relevant_default&utm_relevant_index=2)
 [SpringBoot 调用python接口](https://blog.csdn.net/weixin_43953722/article/details/121703173?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_baidulandingword~default-1-121703173-blog-127508383.235^v28^pc_relevant_default&spm=1001.2101.3001.4242.2&utm_relevant_index=4)
