--- a/project/服务器环境配置.md
+++ b/project/服务器环境配置.md
@@ -131,6 +131,7 @@ service mysql restart
     第三步：重启防火墙：service iptables restart
 
 ###FDFS
+[FastDFS搭建及java整合代码](https://blog.csdn.net/KingBoyWorld/article/details/52299602)
 [fastDFS安装、配置、运行检测](https://blog.csdn.net/Zhou_Yulong/article/details/92802617)
 [FastDFS分布式文件系统安装教程](https://blog.csdn.net/weixin_45525272/article/details/107748384?spm=a2c6h.12873639.article-detail.8.412e794baeF6mR)
 [整合Nginx实现网页访问](https://juejin.cn/post/7039626576463413278)
