服务器环境配置

--- a/project/服务器环境配置.md
+++ b/project/服务器环境配置.md
@@ -8,8 +8,9 @@ ssh zjlab@10.101.8.37
 ssh root@10.101.8.37
 csyt
 
+测试网站
 yjt 33337zS.
-https://xglync.icu/archives/ubuntusshvscodetomcatmaven-da-jian-javaweb-yuan-cheng-kai-fa-huan-jing
+
 https://blog.csdn.net/qq_45684803/article/details/107349188
 |软件|版本|链接|端口|
 | :-----: | :-----: | :----: | :----: |
