--- a/技术选型.md
+++ b/技术选型.md
@@ -249,3 +249,12 @@ java运行python脚本
 存储层：
 负责数据的存储，如MySQL、缓存Memcache等
 
+
+
+出离心
+禅定
+人在一切顺利的时候失去了对苦的敏感
+占有喜欢的东西，远离讨厌的东西都是我们的欲望。
+缘起：爱，取，有
+我执
+只要我们有贪求的对象，“我”就会牢不可破。
