--- a/project/服务器环境配置.md
+++ b/project/服务器环境配置.md
@@ -1,6 +1,5 @@
 ##aly服务器
 i-bp1cah1r60ecnue528d8
-ssh zjlab@10.101.8.37
 cs1tAliyun
 ##zjy服务器
 
@@ -9,7 +8,8 @@ ssh root@10.101.8.37
 csyt
 
 测试网站
-yjt 33337zS.
+yjt
+33337zS.
 
 https://blog.csdn.net/qq_45684803/article/details/107349188
 |软件|版本|链接|端口|
